feat: video CRUD and documentation
